@@ -1,3 +1,7 @@
+[CW27]
+* SyncProxyTester: Incorrect representation of the "key - value" pair in the RPC Request at the XML test
+* SyncProxyTester: Crashes while executing cics_UpperBound_big.xml
+
 [CW26]
 * SYNC Mobile SDK | SyncProxyTester: RPC Request "UnregisterAppInterface" send error
 * SYNC Mobile SDK | SyncProxyTester: Resumption: Heartbeat timeout after IgnitionOff on mobile
